src/parser/JavaScriptParser.ts
// Generated from ./src/parser/JavaScriptParser.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { JavaScriptParserListener } from './JavaScriptParserListener';
import JavaScriptBaseParser from './JavaScriptBaseParser';

export class JavaScriptParser extends JavaScriptBaseParser {
	public static readonly RegularExpressionLiteral=1;
	public static readonly LineTerminator=2;
	public static readonly OpenBracket=3;
	public static readonly CloseBracket=4;
	public static readonly OpenParen=5;
	public static readonly CloseParen=6;
	public static readonly OpenBrace=7;
	public static readonly CloseBrace=8;
	public static readonly SemiColon=9;
	public static readonly Comma=10;
	public static readonly Assign=11;
	public static readonly QuestionMark=12;
	public static readonly Colon=13;
	public static readonly Ellipsis=14;
	public static readonly Dot=15;
	public static readonly PlusPlus=16;
	public static readonly MinusMinus=17;
	public static readonly Plus=18;
	public static readonly Minus=19;
	public static readonly BitNot=20;
	public static readonly Not=21;
	public static readonly Multiply=22;
	public static readonly Divide=23;
	public static readonly Modulus=24;
	public static readonly RightShiftArithmetic=25;
	public static readonly LeftShiftArithmetic=26;
	public static readonly RightShiftLogical=27;
	public static readonly LessThan=28;
	public static readonly MoreThan=29;
	public static readonly LessThanEquals=30;
	public static readonly GreaterThanEquals=31;
	public static readonly Equals_=32;
	public static readonly NotEquals=33;
	public static readonly IdentityEquals=34;
	public static readonly IdentityNotEquals=35;
	public static readonly BitAnd=36;
	public static readonly BitXOr=37;
	public static readonly BitOr=38;
	public static readonly And=39;
	public static readonly Or=40;
	public static readonly MultiplyAssign=41;
	public static readonly DivideAssign=42;
	public static readonly ModulusAssign=43;
	public static readonly PlusAssign=44;
	public static readonly MinusAssign=45;
	public static readonly LeftShiftArithmeticAssign=46;
	public static readonly RightShiftArithmeticAssign=47;
	public static readonly RightShiftLogicalAssign=48;
	public static readonly BitAndAssign=49;
	public static readonly BitXorAssign=50;
	public static readonly BitOrAssign=51;
	public static readonly ARROW=52;
	public static readonly NullLiteral=53;
	public static readonly BooleanLiteral=54;
	public static readonly DecimalLiteral=55;
	public static readonly HexIntegerLiteral=56;
	public static readonly OctalIntegerLiteral=57;
	public static readonly OctalIntegerLiteral2=58;
	public static readonly BinaryIntegerLiteral=59;
	public static readonly Break=60;
	public static readonly Do=61;
	public static readonly Instanceof=62;
	public static readonly Typeof=63;
	public static readonly Case=64;
	public static readonly Else=65;
	public static readonly New=66;
	public static readonly Var=67;
	public static readonly Catch=68;
	public static readonly Finally=69;
	public static readonly Return=70;
	public static readonly Void=71;
	public static readonly Continue=72;
	public static readonly For=73;
	public static readonly Switch=74;
	public static readonly While=75;
	public static readonly Debugger=76;
	public static readonly Function=77;
	public static readonly This=78;
	public static readonly With=79;
	public static readonly Default=80;
	public static readonly If=81;
	public static readonly Throw=82;
	public static readonly Delete=83;
	public static readonly In=84;
	public static readonly Try=85;
	public static readonly Class=86;
	public static readonly Enum=87;
	public static readonly Extends=88;
	public static readonly Super=89;
	public static readonly Const=90;
	public static readonly Export=91;
	public static readonly Import=92;
	public static readonly Implements=93;
	public static readonly Let=94;
	public static readonly Private=95;
	public static readonly Public=96;
	public static readonly Interface=97;
	public static readonly Package=98;
	public static readonly Protected=99;
	public static readonly Static=100;
	public static readonly Yield=101;
	public static readonly Identifier=102;
	public static readonly StringLiteral=103;
	public static readonly TemplateStringLiteral=104;
	public static readonly WhiteSpaces=105;
	public static readonly MultiLineComment=106;
	public static readonly SingleLineComment=107;
	public static readonly HtmlComment=108;
	public static readonly CDataComment=109;
	public static readonly UnexpectedCharacter=110;
	public static readonly RULE_program = 0;
	public static readonly RULE_sourceElement = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_block = 3;
	public static readonly RULE_statementList = 4;
	public static readonly RULE_variableStatement = 5;
	public static readonly RULE_variableDeclarationList = 6;
	public static readonly RULE_variableDeclaration = 7;
	public static readonly RULE_emptyStatement = 8;
	public static readonly RULE_expressionStatement = 9;
	public static readonly RULE_ifStatement = 10;
	public static readonly RULE_iterationStatement = 11;
	public static readonly RULE_varModifier = 12;
	public static readonly RULE_continueStatement = 13;
	public static readonly RULE_breakStatement = 14;
	public static readonly RULE_returnStatement = 15;
	public static readonly RULE_withStatement = 16;
	public static readonly RULE_switchStatement = 17;
	public static readonly RULE_caseBlock = 18;
	public static readonly RULE_caseClauses = 19;
	public static readonly RULE_caseClause = 20;
	public static readonly RULE_defaultClause = 21;
	public static readonly RULE_labelledStatement = 22;
	public static readonly RULE_throwStatement = 23;
	public static readonly RULE_tryStatement = 24;
	public static readonly RULE_catchProduction = 25;
	public static readonly RULE_finallyProduction = 26;
	public static readonly RULE_debuggerStatement = 27;
	public static readonly RULE_functionDeclaration = 28;
	public static readonly RULE_classDeclaration = 29;
	public static readonly RULE_classTail = 30;
	public static readonly RULE_classElement = 31;
	public static readonly RULE_methodDefinition = 32;
	public static readonly RULE_generatorMethod = 33;
	public static readonly RULE_formalParameterList = 34;
	public static readonly RULE_formalParameterArg = 35;
	public static readonly RULE_lastFormalParameterArg = 36;
	public static readonly RULE_functionBody = 37;
	public static readonly RULE_sourceElements = 38;
	public static readonly RULE_arrayLiteral = 39;
	public static readonly RULE_elementList = 40;
	public static readonly RULE_lastElement = 41;
	public static readonly RULE_objectLiteral = 42;
	public static readonly RULE_propertyAssignment = 43;
	public static readonly RULE_propertyName = 44;
	public static readonly RULE_arguments = 45;
	public static readonly RULE_lastArgument = 46;
	public static readonly RULE_expressionSequence = 47;
	public static readonly RULE_singleExpression = 48;
	public static readonly RULE_arrowFunctionParameters = 49;
	public static readonly RULE_arrowFunctionBody = 50;
	public static readonly RULE_assignmentOperator = 51;
	public static readonly RULE_literal = 52;
	public static readonly RULE_numericLiteral = 53;
	public static readonly RULE_identifierName = 54;
	public static readonly RULE_reservedWord = 55;
	public static readonly RULE_keyword = 56;
	public static readonly RULE_getter = 57;
	public static readonly RULE_setter = 58;
	public static readonly RULE_eos = 59;
	public static readonly ruleNames: string[] = [
		"program", "sourceElement", "statement", "block", "statementList", "variableStatement", 
		"variableDeclarationList", "variableDeclaration", "emptyStatement", "expressionStatement", 
		"ifStatement", "iterationStatement", "varModifier", "continueStatement", 
		"breakStatement", "returnStatement", "withStatement", "switchStatement", 
		"caseBlock", "caseClauses", "caseClause", "defaultClause", "labelledStatement", 
		"throwStatement", "tryStatement", "catchProduction", "finallyProduction", 
		"debuggerStatement", "functionDeclaration", "classDeclaration", "classTail", 
		"classElement", "methodDefinition", "generatorMethod", "formalParameterList", 
		"formalParameterArg", "lastFormalParameterArg", "functionBody", "sourceElements", 
		"arrayLiteral", "elementList", "lastElement", "objectLiteral", "propertyAssignment", 
		"propertyName", "arguments", "lastArgument", "expressionSequence", "singleExpression", 
		"arrowFunctionParameters", "arrowFunctionBody", "assignmentOperator", 
		"literal", "numericLiteral", "identifierName", "reservedWord", "keyword", 
		"getter", "setter", "eos"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, "'['", "']'", "'('", "')'", "'{'", "'}'", 
		"';'", "','", "'='", "'?'", "':'", "'...'", "'.'", "'++'", "'--'", "'+'", 
		"'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'>>'", "'<<'", "'>>>'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", 
		"'|'", "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
		"'>>='", "'>>>='", "'&='", "'^='", "'|='", "'=>'", "'null'", undefined, 
		undefined, undefined, undefined, undefined, undefined, "'break'", "'do'", 
		"'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'", 
		"'finally'", "'return'", "'void'", "'continue'", "'for'", "'switch'", 
		"'while'", "'debugger'", "'function'", "'this'", "'with'", "'default'", 
		"'if'", "'throw'", "'delete'", "'in'", "'try'", "'class'", "'enum'", "'extends'", 
		"'super'", "'const'", "'export'", "'import'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, "RegularExpressionLiteral", "LineTerminator", "OpenBracket", 
		"CloseBracket", "OpenParen", "CloseParen", "OpenBrace", "CloseBrace", 
		"SemiColon", "Comma", "Assign", "QuestionMark", "Colon", "Ellipsis", "Dot", 
		"PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply", 
		"Divide", "Modulus", "RightShiftArithmetic", "LeftShiftArithmetic", "RightShiftLogical", 
		"LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", "Equals_", 
		"NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", "BitXOr", 
		"BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"ARROW", "NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral", 
		"OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", 
		"Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var", "Catch", 
		"Finally", "Return", "Void", "Continue", "For", "Switch", "While", "Debugger", 
		"Function", "This", "With", "Default", "If", "Throw", "Delete", "In", 
		"Try", "Class", "Enum", "Extends", "Super", "Const", "Export", "Import", 
		"Implements", "Let", "Private", "Public", "Interface", "Package", "Protected", 
		"Static", "Yield", "Identifier", "StringLiteral", "TemplateStringLiteral", 
		"WhiteSpaces", "MultiLineComment", "SingleLineComment", "HtmlComment", 
		"CDataComment", "UnexpectedCharacter"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(JavaScriptParser._LITERAL_NAMES, JavaScriptParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return JavaScriptParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "JavaScriptParser.g4"; }

	@Override
	public get ruleNames(): string[] { return JavaScriptParser.ruleNames; }

	@Override
	public get serializedATN(): string { return JavaScriptParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(JavaScriptParser._ATN, this);
	}
	@RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, JavaScriptParser.RULE_program);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,0,this._ctx) ) {
			case 1:
				{
				this.state = 120;
				this.sourceElements();
				}
				break;
			}
			this.state = 123;
			this.match(JavaScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public sourceElement(): SourceElementContext {
		let _localctx: SourceElementContext = new SourceElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, JavaScriptParser.RULE_sourceElement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
			case 1:
				{
				this.state = 125;
				this.match(JavaScriptParser.Export);
				}
				break;
			}
			this.state = 128;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, JavaScriptParser.RULE_statement);
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,2,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 130;
				this.block();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 131;
				this.variableStatement();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 132;
				this.emptyStatement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 133;
				this.expressionStatement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 134;
				this.ifStatement();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 135;
				this.iterationStatement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 136;
				this.continueStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 137;
				this.breakStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 138;
				this.returnStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 139;
				this.withStatement();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 140;
				this.labelledStatement();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 141;
				this.switchStatement();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 142;
				this.throwStatement();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 143;
				this.tryStatement();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 144;
				this.debuggerStatement();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 145;
				this.functionDeclaration();
				}
				break;

			case 17:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 146;
				this.classDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, JavaScriptParser.RULE_block);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(JavaScriptParser.OpenBrace);
			this.state = 151;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,3,this._ctx) ) {
			case 1:
				{
				this.state = 150;
				this.statementList();
				}
				break;
			}
			this.state = 153;
			this.match(JavaScriptParser.CloseBrace);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statementList(): StatementListContext {
		let _localctx: StatementListContext = new StatementListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, JavaScriptParser.RULE_statementList);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156; 
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 155;
					this.statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 158; 
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,4,this._ctx);
			} while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variableStatement(): VariableStatementContext {
		let _localctx: VariableStatementContext = new VariableStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, JavaScriptParser.RULE_variableStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.varModifier();
			this.state = 161;
			this.variableDeclarationList();
			this.state = 162;
			this.eos();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variableDeclarationList(): VariableDeclarationListContext {
		let _localctx: VariableDeclarationListContext = new VariableDeclarationListContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, JavaScriptParser.RULE_variableDeclarationList);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.variableDeclaration();
			this.state = 169;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 165;
					this.match(JavaScriptParser.Comma);
					this.state = 166;
					this.variableDeclaration();
					}
					} 
				}
				this.state = 171;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
